CB, Changing index.html

--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,11 @@
 </head>
 
 <body>
-  
-      
-  <app-root>cargando app...</app-root>
 
- 
+  
+  <app-root>
+    <h1>Initializing...</h1>
+  </app-root>
+
 </body>
 </html>
